<resources>
    <string name="app_name">PLASMODIIAG</string>
    <string name="objetivo">Este aplicativo tem o objetivo de proporcionar uma solução que identifica células vermelhas e/ou corpos de DNA em uma imagem de exame de sangue</string>
    <string name="aviso"> Este aplicativo necessita de permissão para ler e salvar imagens no dispositivo</string>
    <string name="comecar">Começar</string>
    <string name="botao_celulas_vermelhas">Destacar células vermelhas</string>
    <string name="botao_corpos_dna">Destacar corpos de DNA</string>
    <string name="botao_processo_completo">Realizar processamento completo</string>
    <string name="descricao_botao_reset">Restaurar imagem</string>
    <string name="descricao_botao_salvar">Salvar imagem</string>
    <string name="descricao_botao_galeria">Carregar imagem</string>
    <string name="label_raio_rbc">Raio da Célula Vermelha do Sangue:</string>
    <string name="label_raio_wbc">Raio da Célula Branca do Sangue:</string>
    <string name="valor_padrao_rbc">10</string>
    <string name="valor_padrao_wbc">13</string>
</resources>