<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity"
    android:orientation="vertical"
    android:layout_marginHorizontal="10dp"
    >

    <TextView
        android:background="@drawable/login_titulo_borda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:textStyle="bold"
        />

    <TextView
        android:background="@drawable/login_objetivos_borda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:text="@string/objetivo"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:padding="10dp"/>

    <TextView
        android:background="@drawable/login_aviso_borda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/aviso"
        android:textColor="@color/white"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:padding="10dp"/>

    <Button
        android:id="@+id/btnComecar"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp"
        android:text="@string/comecar"
        android:textSize="20sp"
        android:textColor="@color/white"
    />

</LinearLayout>